    (``Element.starttag``) to use ``serial_escape``.
  - Added ``Node.deepcopy()`` method.
  - Removed the internal lists ``document.substitution_refs``,
    ``document.anonymous_refs``, and ``document.anonymous_targets``.
  - Added a "container" element.

* docutils/statemachine.py:

  - Added trailing whitespace stripping to ``string2lines()``.

* docutils/languages/ja.py: Added to project: Japanese mappings by
  Hisashi Morita.

* docutils/languages/zh_cn.py: Added to project: Simplified Chinese
  mappings by Panjunyong.

* docutils/parsers/null.py: Added to project; a do-nothing parser.

* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.
  - Fixed bug with enumerated lists (SF#1254145).
  - Backslash-escaped colons inside of field names are now allowed.
  - Targets (implicit and explicit), anonymous hyperlink references
    and auto-numbered footnote references inside of substitution
    definitions are now disallowed.
  - Fixed bug: list items with blank first lines.
  - Fixed bug: block quote attributions with indented second lines.

* docutils/parsers/rst/directives/body.py:

  - Added the "container" directive.

* docutils/parsers/rst/directives/misc.py:

  - Added the "default-role" and "title" directives.
  - Added standard data file syntax to the "include" directive.
  - Added support for "class" directive content.

* docutils/parsers/rst/directives/images.py:

  - Added support for image width and height units.
  - Fixed bug with image "target" options.

* docutils/parsers/rst/include/: Directory added to project; contains
  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docutils/parsers/rst/languages/ja.py: Added to project: Japanese
  mappings by Hisashi Morita.
  